[gd_scene load_steps=20 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://PlayerManager.gd" type="Script" id=2]
[ext_resource path="res://CameraManager.gd" type="Script" id=3]
[ext_resource path="res://EnemyManager.gd" type="Script" id=4]
[ext_resource path="res://in_progress/plaeyr.png" type="Texture" id=5]
[ext_resource path="res://in_progress/punch.png" type="Texture" id=6]
[ext_resource path="res://neodgm.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://UI.gd" type="Script" id=8]

[sub_resource type="PlaneMesh" id=1]

[sub_resource type="BoxShape" id=2]
extents = Vector3( 0.1, 0.2, 0.1 )

[sub_resource type="BoxShape" id=8]
extents = Vector3( 0.204, 0.069, 0.1 )

[sub_resource type="AnimationNodeStateMachine" id=9]

[sub_resource type="AnimationNodeStateMachinePlayback" id=10]

[sub_resource type="Animation" id=11]
resource_name = "idle"

[sub_resource type="BoxShape" id=6]
extents = Vector3( 0.1, 0.2, 0.1 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 0.6, 0.3, 0.01 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 2.27239, 0.01, 1.54254 )

[sub_resource type="GDScript" id=5]
script/source = "extends Spatial


# Declare member variables here. Examples:
# var a = 2
# var b = \"text\"


# Called when the node enters the scene tree for the first time.
func _ready():
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass
"

[sub_resource type="DynamicFont" id=7]
size = 32
font_data = ExtResource( 7 )

[node name="Game" type="Node"]

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 2.22108, 0, 0, 0, 1, 0, 0, 0, 1.54562, 0.0116724, -0.0987435, -0.0977687 )
mesh = SubResource( 1 )
material/0 = null

[node name="MeshInstance4" type="MeshInstance" parent="."]
transform = Transform( -5.2108e-15, -4.37114e-08, -1, -1, 1.19209e-07, 0, 1.19209e-07, 1, -4.37114e-08, 1.19209e-07, 1, -1 )
mesh = SubResource( 1 )
material/0 = null

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.915908, 0.401388, 0, -0.401388, 0.915908, 0, 2.59861, 4.80915 )
projection = 1
script = ExtResource( 3 )

[node name="Tween" type="Tween" parent="Camera"]

[node name="Player" type="KinematicBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.494798, 0.871885, 0 )
script = ExtResource( 2 )

[node name="PlayerGround" type="CollisionShape" parent="Player"]
shape = SubResource( 2 )

[node name="Sprite3D" type="Sprite3D" parent="Player"]
billboard = 2
texture = ExtResource( 5 )

[node name="Sprite3D2" type="Sprite3D" parent="Player/Sprite3D"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.01 )
billboard = 2
texture = ExtResource( 6 )

[node name="LeftNotifler" type="VisibilityNotifier" parent="Player"]
aabb = AABB( -0.35, -0.2, 0, 0.025, 0.4, 0.1 )

[node name="RightNOtifler" type="VisibilityNotifier" parent="Player"]
aabb = AABB( 1, -0.2, 0, 0.025, 0.4, 0.1 )

[node name="PlayerAttackHit" type="Area" parent="Player"]

[node name="CollisionShape" type="CollisionShape" parent="Player/PlayerAttackHit"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0990875, 0.062934, 0 )
shape = SubResource( 8 )

[node name="PlayerAnimTree" type="AnimationTree" parent="Player"]
tree_root = SubResource( 9 )
anim_player = NodePath("PlayerAnim")
parameters/playback = SubResource( 10 )

[node name="PlayerAnim" type="AnimationPlayer" parent="Player/PlayerAnimTree"]
root_node = NodePath("../..")
anims/idle = SubResource( 11 )

[node name="Enemy" type="KinematicBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.27614, 0.871885, 0 )
script = ExtResource( 4 )

[node name="Ground" type="CollisionShape" parent="Enemy"]
shape = SubResource( 6 )

[node name="Sprite3D" type="Sprite3D" parent="Enemy"]
transform = Transform( 0.5, 0, 0, 0, 0.6, 0, 0, 0, 1, -0.0026277, 0.0210097, 0.00174046 )
modulate = Color( 1, 0, 0, 1 )
billboard = 2
texture = ExtResource( 1 )

[node name="LeftNotifler" type="VisibilityNotifier" parent="Enemy"]
aabb = AABB( -0.176371, 0.138184, -0.022, 0.0246167, 0.5, 0.1 )

[node name="RightNOtifler" type="VisibilityNotifier" parent="Enemy"]
aabb = AABB( 0.151266, 0.138184, -0.022, 0.0246167, 0.5, 0.1 )

[node name="EnemyDetecter" type="Area" parent="Enemy"]

[node name="CollisionShape" type="CollisionShape" parent="Enemy/EnemyDetecter"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.3, 0 )
shape = SubResource( 4 )

[node name="EnemyHurt" type="Area" parent="Enemy"]

[node name="Ground" type="CollisionShape" parent="Enemy/EnemyHurt"]
shape = SubResource( 6 )

[node name="StaticBody" type="StaticBody" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
shape = SubResource( 3 )

[node name="StaticBody2" type="StaticBody" parent="."]
transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, -1.13641, 1.14415, 0.565178 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody2"]
shape = SubResource( 3 )

[node name="StaticBody3" type="StaticBody" parent="."]
transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 1.10497, 1.14415, 0.565178 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody3"]
shape = SubResource( 3 )

[node name="TurnManager" type="Spatial" parent="."]
script = SubResource( 5 )

[node name="UILayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="UILayer"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 8 )

[node name="HBox" type="HBoxContainer" parent="UILayer/UI"]
margin_left = 1.0
margin_top = 30.0
margin_right = 1024.0
margin_bottom = 90.0

[node name="PlayerHPbar" type="ProgressBar" parent="UILayer/UI/HBox"]
margin_right = 450.0
margin_bottom = 60.0
rect_min_size = Vector2( 450, 60 )
value = 100.0
percent_visible = false

[node name="Control" type="HBoxContainer" parent="UILayer/UI/HBox"]
margin_left = 454.0
margin_right = 569.0
margin_bottom = 60.0
size_flags_horizontal = 3

[node name="Label" type="Label" parent="UILayer/UI/HBox/Control"]
margin_top = 14.0
margin_right = 16.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 7 )
text = "0"

[node name="Control" type="Control" parent="UILayer/UI/HBox/Control"]
margin_left = 20.0
margin_right = 95.0
margin_bottom = 60.0
size_flags_horizontal = 3

[node name="Label2" type="Label" parent="UILayer/UI/HBox/Control"]
margin_left = 99.0
margin_top = 14.0
margin_right = 115.0
margin_bottom = 46.0
custom_fonts/font = SubResource( 7 )
text = "0"

[node name="EnemyHPbar" type="ProgressBar" parent="UILayer/UI/HBox"]
margin_left = 573.0
margin_right = 1023.0
margin_bottom = 60.0
rect_min_size = Vector2( 450, 60 )
value = 100.0
percent_visible = false

[connection signal="player_died" from="Player" to="UILayer/UI" method="_on_player_died"]
[connection signal="screen_entered" from="Player/LeftNotifler" to="Camera" method="_on_Player_LeftNotifler_screen_entered"]
[connection signal="screen_exited" from="Player/LeftNotifler" to="Camera" method="_on_Player_LeftNotifler_screen_exited"]
[connection signal="screen_entered" from="Player/RightNOtifler" to="Camera" method="_on_Player_RightNOtifler_screen_entered"]
[connection signal="screen_exited" from="Player/RightNOtifler" to="Camera" method="_on_Player_RightNOtifler_screen_exited"]
[connection signal="enemy_died" from="Enemy" to="UILayer/UI" method="_on_Enemy_died"]
[connection signal="body_entered" from="Enemy/EnemyDetecter" to="Enemy" method="_on_Detectbox_body_entered"]
[connection signal="body_exited" from="Enemy/EnemyDetecter" to="Enemy" method="_on_Detectbox_body_exited"]
[connection signal="area_entered" from="Enemy/EnemyHurt" to="Enemy" method="_on_HurtHit_area_entered"]
